Fixed horizontal scrollbar on mobile devices

--- a/web/css/theme/layout/_page.less
+++ b/web/css/theme/layout/_page.less
@@ -1,5 +1,5 @@
 & when (@critical) {
-    body {
+    html, body {
         overflow-x: hidden;
     }
     .page-main {
